--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
     <h1> Today we will learn to use github </h1>
     <br>
-    <p> The first step is to creat your webpage through the repository </p>
-    
+    <p> The first step is to create an account through github. Click link below to do so. </p>
+   
+	<a href="https://github.com">click here</a>
+
+	
 </html>
