--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <h1> Today we will learn to use github </h1>
     <br>
     <p> The first step is to create an account through github. Click link below to do so. </p>
-   
+	
 	<a href="https://github.com">click here</a>
+		<dl> I dont know what this does yet. </dl>
 
 	
 </html>
