--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Must Get Virtual Reality Games of 2022!</title>
+        <title>Grayscale - Best VR Games of all Time</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#tierlist">Tier List</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
                 </div>
@@ -40,7 +40,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Top Virtual Reality Games of 2022</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">The future of gaming and interaction starts with Virtual Reality.</h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a>
+                        <a class="btn btn-primary" href="#tierlist">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,11 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4"> 5</h2>
                         <p class="text-white-50">
-                            
+                            In the past year, Virtual Reality Gaming has gone through unprecedented growth both in technology as well as the community. Even the top christmas
+                            gift of 2022 was the Oculus Quest 2 which was enjoyed by all ages. After purchasing an oculus, users would simply login or sigup through facebook to 
+                            to get the best experience possible. After logging in, Users are faced with a more difficult choice. Which Vitrual Reality world or game should i 
+                            purchase first? 
+
                             <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
                             The theme is open source, and you can use it for any purpose, personal or commercial.
                         </p>
@@ -62,7 +66,7 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <section class="projects-section bg-light" id="tierlist">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
