--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4"> 5</h2>
+                        <h2 class="text-white mb-4"> About</h2>
                         <p class="text-white-50">
                             In the past year, Virtual Reality Gaming has gone through unprecedented growth both in technology as well as the community. Even the top christmas
                             gift of 2022 was the Oculus Quest 2 which was enjoyed by all ages. After purchasing an oculus, users would simply login or sigup through facebook to 
