--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img src="beatsaber.jpg" alt="BeatSaber" />
             </div>
         </section>
         <!-- Projects-->
