--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                 </div>
-                <img src="beatsaber.jpg" alt="BeatSaber" />
+                <img src="beatsaber.jfif" alt="BeatSaber" />
             </div>
         </section>
         <!-- Projects-->
