--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Best VR Games of all Time</title>
+        <title>Grayscale - VR, The Gaming Of the Future /title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#tierlist">Tier List</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
                 </div>
@@ -38,9 +38,9 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Top Virtual Reality Games of 2022</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">The future of gaming and interaction starts with Virtual Reality.</h2>
-                        <a class="btn btn-primary" href="#tierlist">Get Started</a>
+                        <h1 class="mx-auto my-0 text-uppercase"> Virtual Reality, The Future of Gaming </h1>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5"> Immersion begins here </h2>
+                        <a class="btn btn-primary" href="#products">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -52,13 +52,12 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4"> About</h2>
                         <p class="text-white-50">
-                            In the past year, Virtual Reality Gaming has gone through unprecedented growth both in technology as well as the community. Even the top christmas
-                            gift of 2022 was the Oculus Quest 2 which was enjoyed by all ages. After purchasing an oculus, users would simply login or sigup through facebook to 
-                            to get the best experience possible. After logging in, Users are faced with a more difficult choice. Which Vitrual Reality world or game should i 
-                            purchase first? 
-
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+                            Have you ever needed to escape your job, family or school just to collect your thoughts and relax? If so, the immersive experience of virtual
+                            reality can be that escape as you enter a whole new world free from the shackles of the real world. You can fight dungeons with friends, meditate
+                            on the sea floor or even go to a comedy show if ever needed. There are endless possibilities with virtual reality and the immersion begins
+                      
+                            <a href="https://about.facebook.com/meta/">here.</a>
+                            
                         </p>
                     </div>
                 </div>
