--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="assets/img/globe.jfif" alt="..." />
             </div>
         </section>
         <!-- Projects-->
