--- a/index.html
+++ b/index.html
@@ -59,20 +59,19 @@
                           
                         </p>
                     </div>
-                </div>
-                <img class="img-fluid" src="assets/img/globe.jfif" alt="..." />
-            </div>
+               
         </section>
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Metaverse.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/oculus.jfif" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Oculus Quest 2</h4>
+                            <p class="text-black-50 mb-0">The most popular and immersive produce from Meta. With 1832x1920 resolution per fresnal lens, a fast swtch LCD display, 256 Gb of storage
+                             and 3 hours of battery life, the Oculus Quest 2 is the top VR headset. For only $299 one can be full immersed into the virtual world.</p>
                         </div>
                     </div>
                 </div>
