--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Augmented Reality</h4>
                                     <p class="mb-0 text-white-50">Through videos and photos, AR enhances real life experiences with the swipe of a screen. Express yourself to 
-                                    the fullest with your friends and family like youve never done before.</p>
+                                    the fullest with your friends and family like you've never done before.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
